# open_sandbox

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
res/: resources.json
res/shaders/: fragment.txt  fragment_sprite.txt  vertex.txt  vertex_sprite.txt
src/: main.cpp
src/game/: Block.cpp  Block.h  Game.cpp  Game.h
src/render/: AnimatedSprite.cpp  AnimatedSprite.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/resources/: ResourceManager.cpp  ResourceManager.h
